--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "passport-steam": "^1.0.17",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
