--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/afebre1027/FinalProject#readme",
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "passport-steam": "^1.0.17"
   },
   "devDependencies": {
     "concurrently": "^7.1.0"
