--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/afebre1027/FinalProject#readme",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "express": "^4.17.3",
     "graphql": "^16.3.0"
   },
   "devDependencies": {
