--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "passport": "^0.5.2",
+    "passport-steam": "^1.0.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
