--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "graphql": "^16.3.0",
+    "passport-openid": "^0.4.0",
     "passport-steam": "^1.0.17"
   },
   "devDependencies": {
